--- a/session-14/blue.html
+++ b/session-14/blue.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Blue</title>
 </head>
-<body>
-
+<body style="background-color: lightblue;">
+  <h1>Blue</h1>
+  <p>This is the blue page</p>
+  <a href="/">Main page</a>
 </body>
 </html>
