--- a/session-14/green.html
+++ b/session-14/green.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Green</title>
 </head>
-<body>
-
+<body style="background-color: lightgreen;">
+    <h1>Green</h1>
+    <p>You are in the green page!!</p>
+    <a href="/">Main page</a>
 </body>
 </html>
