--- a/session-14/index.html
+++ b/session-14/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Main</title>
 </head>
-<body>
+<body style="background-color: yellow">
+  <h1>MAIN Page</h1>
+<p>Click on the page you want to access</p>
+<a href="green.html">[Green page]</a>
+<a href="blue.html">[Blue page]</a>
+<a href="pink.html">[Pink page]</a>
 
 </body>
 </html>
