--- a/session-14/pink.html
+++ b/session-14/pink.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Pink</title>
 </head>
-<body>
-
+<body style="background-color: pink;">
+  <h1>Pink</h1>
+  <p>This is the pink page</p>
+  <a href="/">Main page</a>
 </body>
 </html>
