--- a/P5/index.html
+++ b/P5/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <title>INDEX</title>
 </head>
-<body>
+<body style="background-color: white;">
 <h1>Bases information</h1>
 <p>Click on the following links to have more information</p>
 [<a href="/info/A.html">A</a>] [<a href="/info/C.html">C</a>] [<a href="/info/G.html">G</a>] [<a href="/info/T.html">T</a>]
