exercises from session 13

--- a/P4/index.html
+++ b/P4/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <title>INDEX</title>
 </head>
-<body>
+<body style="background-color: white;">
 <h1>Bases information</h1>
 <p>Click on the following links to have more information</p>
 [<a href="/info/A">A</a>] [<a href="/info/C">C</a>] [<a href="/info/G">G</a>] [<a href="/info/T">T</a>]
