--- a/Final-Project/index.html
+++ b/Final-Project/index.html
@@ -4,7 +4,7 @@
    <meta charset="utf-8">
    <title>INDEX</title>
  </head>
- <body>
+ <body style="background-color: lightyellow;">
    <h1>BROWSING HUMAN AND VERTEBRATES GENOME</h1>
    <p>BASIC LEVEL SERVICES</p>
    <hr>
